@@ -13,6 +13,7 @@ body.editbox {
 
 pre.code, .editbox {
   color: #666666;
+  background: #ffffff;
 }
 
 .editbox p {
